--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands =
     python setup.py develop
 basepython=python3.7
 
-[testenv:build-package]
+[testenv:build]
 commands =
     python setup.py sdist
     python setup.py bdist_wheel
