Updating MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include versioneer.py
-include src/docserver/_version.py
-include requirements.txtinclude src/docsclient/_version.py
+include requirements.txt
+include src/docsclient/_version.py
