Setting up to use aad_client for auth as an option

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,60 @@
-[bdist_wheel]
-universal=1
+[metadata]
+name = docsclient
+author = David Pugh
+author_email = djpugh@gmail.com
+description = Python Client for Docserver
+long_descripion = file:README.rst
+long_description_content_type = text/x-rst
+url = https://djpugh.github.io/docsclient
+classifiers =
+        Environment :: Console
+        Topic :: Software Development :: Libraries :: Python Modules
+        Topic :: Internet :: WWW/HTTP :: WSGI
+        Programming Language :: Python :: 3
+        Intended Audience :: Developers
+    	License :: OSI Approved :: MIT License
+        Operating System :: Microsoft :: Windows
+        Operating System :: POSIX :: Linux
+        Operating System :: MacOS :: MacOS X
+        Natural Language :: English
+provides =
+    docsclient
+;can't use this as we are setting requirements in setup.py which breaks the wheel
+;requires-dist = setuptools
+
+[options]
+setup_requires =
+    setuptools
+package_dir =
+    =src
+packages = find:
+python_requires = >=3
+
+[options.package_data]
+* =  *.rst
+     requirements.txt
+     *.ini
+     *.cfg
+     *.whl
+     *.html
+     *.css
+     *.woff
+     *.otf
+     *.svg
+     *.eot
+     *.ttf
+     *.png
+     *.css.map
+
+[options.packages.find]
+where=src
 
 [versioneer]
 VCS = git
 style = pep440
 versionfile_source = src/docsclient/_version.py
 versionfile_build = docsclient/_version.py
-tag_prefix = 
+tag_prefix =
 parentdir_prefix = docsclient-
 
 
@@ -51,5 +99,14 @@ exclude =
     .tox/*
 show_source = True
 statistics = True
-import-order-style=appnexus
 application-import-names=docsclient
+import-order-style=google
+docstring-convention=google
+
+
+[mypy]
+mypy_path = src/
+ignore_missing_imports = True
+
+[mypy-docsclient._version]
+ignore_errors = True
