--- a/tox.ini
+++ b/tox.ini
@@ -3,22 +3,41 @@ envlist = {test}-{py37}
 
 
 [testenv]
-deps = 
+deps =
     -rrequirements.txt
-    lint: flake8
-    lint: pipenv
-    lint: flake8-import-order
-    test: pytest
-    test: pytest-cov
-    docs: sphinx
-    build: wheel<=0.30.0
+    lint,develop: flake8
+    lint,develop: pipenv
+    lint,develop: flake8-import-order
+    lint,develop: flake8-eradicate
+    lint,develop: flake8-docstrings
+    test,develop: pytest
+    test,develop: pytest-cov
+    test,develop: tox
+    cq,develop: pylint
+    types,develop: mypy
+    types,develop: lxml
+    security,develop: bandit
+    docs,develop: sphinx
+    docs,develop: sphinx_material
+    docs,develop: sphinx_github_changelog
+    build,develop: wheel
 
-commands = 
+commands =
     lint: flake8 src/
     lint: pipenv check
-    test: pytest -rs tests/unit --log-level=WARNING --cov=docserver --cov-report html:{toxinidir}/reports/{envname}-coverage.html
-    docs: sphinx -b html -a {toxinidir}/source {toxinidir}/docs/html
-basepython=python3.7
+    test: pytest  {posargs: -rs tests/unit --log-level=WARNING --cov=docsclient --cov-report xml:{toxinidir}/reports/{envname}-coverage.xml}
+    docs: python -m sphinx -b html -a {toxinidir}/docs/source {toxinidir}/docs/html
+    build: python setup.py sdist --format=zip
+    build: python setup.py sdist --format=gztar
+    build: python setup.py bdist_wheel
+    security: python -c "import os; a = 1 if os.path.exists('reports') else os.makedirs('reports')"
+    security: bandit -r src/ --format xml --output reports/security-results.xml -x *_version.py
+    security: bandit -r src/  -x *_version.py
+    types: python -c "import os; a = 1 if os.path.exists('reports') else os.makedirs('reports')"
+    types: mypy -p docsclient --linecoverage-report reports --junit-xml reports/mypy.xml --cobertura-xml-report test-reports
+passenv =
+    docs: SPHINX_GITHUB_CHANGELOG_TOKEN
+
 
 
 [testenv:setup_version]
@@ -30,7 +49,7 @@ skip_install=True
 [testenv:develop]
 skip_install = True
 envdir = {toxinidir}/.venv
-commands = 
+commands =
     pip install -rrequirements.txt
     python setup.py develop
 basepython=python3.7
